--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,7 @@ dependencies {
     // BottomNavigationViewEx Library
     compile 'com.github.ittianyu:BottomNavigationViewEx:1.2.0'
 
+    // Circle Image View Library
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+
 }
